Remove fixed width for icon alignment to allow for flexible layout

--- a/files/public/css/style.css
+++ b/files/public/css/style.css
@@ -542,7 +542,7 @@ header {
 
     .alinhamento_icones {
         text-align: center;
-        width: 33%;
+        /* width: 33%; */
     }
 
     .inscricao_button {
